# smooth-text-animation

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
smooth_text_animation/: __init__.py  animations.py  utils.py
tests/: test_animations.py
