[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smooth-text-animation"
version = "0.1.0"
description = "Beautiful and smooth text animations for terminal output"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }

authors = [
    { name = "traitimtrongvag", email = "tbinh831@gmail.com" }
]

keywords = ["animation", "terminal", "text", "cli", "console"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/traitimtrongvag/smooth-text-animation"
Repository = "https://github.com/traitimtrongvag/smooth-text-animation"
Documentation = "https://github.com/traitimtrongvag/smooth-text-animation"
Issues = "https://github.com/traitimtrongvag/smooth-text-animation/issues"